<resources>
    <string name="app_name">MyApplication</string>
    <string name="name_job">Tên công việc</string>
    <string name="input_name_job">Nhập tên công việc</string>
    <string name="des_job">Mô tả công việc</string>
    <string name="input_des_job">Nhập mô tả công việc</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="camera">Chụp ảnh</string>
    <string name="library">Thư viện ảnh</string>
    <string name="add">Thêm</string>
    <string name="update">Cập nhật</string>
    <string name="search">Search</string>
    <string name="delete_infomation">Bạn có chắc chắn muốn xóa không?</string>
    <string name="no_delete">Không</string>
    <string name="action_settings">Settings</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="show">Show all the Birthdays</string>
    <string name="delete">Delete all the Birthdays</string>
    <string name="input_name">Nhập tên</string>
    <string name="add_birth">Thêm</string>
    <string name="input_birthday">Nhập ngày sinh</string>
</resources>
