<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name" />

    <EditText
        android:id="@+id/edittext_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_name"
        android:hint="@string/input_birthday" />

    <Button
        android:id="@+id/button_add_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_birthday"
        android:text="@string/add_birth" />

    <Button
        android:id="@+id/button_show_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add_birth"
        android:text="@string/show" />

    <Button
        android:id="@+id/button_delete_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_show_birth"
        android:text="@string/delete" />
</RelativeLayout>